Support hierarchy change operations #8 (#8)
Support hierarchy change operations #8

---------

Co-authored-by: Gheorghe Soimu <soimugeo@gmail.com>